modules/security/main.tf
resource "aws_security_group" "ec2_sg" {
  name        = "${var.project}-ec2-sg"
  description = "SG pour instance EC2"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH depuis IP autorisée"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_cidr]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project}-ec2-sg"
  }
}
